# java-document-scanner-sdk

./: README.md  pom.xml  template.json
jni/: CMakeLists.txt  NativeDocumentScanner.cxx  NativeDocumentScanner.h
jni/src/: docscanner.cpp
src/main/java/com/dynamsoft/ddn/: DocumentResult.java  NativeDocumentScanner.java  NativeLoader.java  NormalizedImage.java  Template.java  Test.java  Utils.java
